--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
+    "express-session": "^1.18.0",
     "firebase": "^10.12.3",
     "react-router-dom": "^6.24.1",
     "styled-components": "^6.1.11"
