--- a/mental-synch-backend/package.json
+++ b/mental-synch-backend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -25,4 +26,3 @@
   "author": "JosephNjorog",
   "license": "ISC"
 }
-
