--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "express-session": "^1.18.0",
     "firebase": "^10.12.3",
+    "formik": "^2.4.6",
     "react-router-dom": "^6.24.1",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "yup": "^1.4.0"
   }
 }
